post(api): update and delete
