# app/Http/Controllers/AuthController.php
@@ -16,19 +16,8 @@ class AuthController extends Controller
         * summary="User Register",
         * description="User Register here",
         *     @OA\RequestBody(
-        *         @OA\JsonContent(),
-        *         @OA\MediaType(
-        *            mediaType="multipart/form-data",
-        *            @OA\Schema(
-        *               type="object",
-        *               required={"name","email", "password", "password_confirmation"},
-        *               @OA\Property(property="name", type="text"),
-        *               @OA\Property(property="email", type="text"),
-        *               @OA\Property(property="password", type="password"),
-        *               @OA\Property(property="password_confirmation", type="password")
-        *            ),
-        *        ),
-        *    ),
+        *         @OA\JsonContent()
+        *     ),
         *      @OA\Response(
         *          response=201,
         *          description="Register Successfully",
@@ -74,16 +63,7 @@ class AuthController extends Controller
         * summary="User Login",
         * description="Login User Here",
         *     @OA\RequestBody(
-        *         @OA\JsonContent(),
-        *         @OA\MediaType(
-        *            mediaType="multipart/form-data",
-        *            @OA\Schema(
-        *               type="object",
-        *               required={"email", "password"},
-        *               @OA\Property(property="email", type="email"),
-        *               @OA\Property(property="password", type="password")
-        *            ),
-        *        ),
+        *         @OA\JsonContent()
         *    ),
         *      @OA\Response(
         *          response=201,
